# BangumiAnimeDataset

./: .gitignore  README.md  download_preprocess.py  plot.py  plot_1_10.py  plot_annual_score.py  plot_annual_score_2000.py  plot_scores.py  pyproject.toml
