[tool.poetry]
name = "bgm_anime_dataset"
version = "0.2.0"
description = ""
authors = ["NKID00 <nkid00@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "==1.22.0"
aiohttp = "^3.8.1"
matplotlib = "^3.5.1"
Pillow = "==8.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
